Mantis 0001677: Fix bug in database migration script.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -3,6 +3,7 @@ openmediavault (3.0.82) stable; urgency=low
   * Update locales.
   * Various improvements.
   * Make SNMP location and contact fields optional.
+  * Mantis 0001677: Fix bug in database migration script.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 26 Jun 2017 22:44:51 +0200
 
