--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/pl_PL/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/pl_PL/openmediavault-lvm2.po
@@ -4,15 +4,15 @@
 # 
 # Translators:
 # Cyryl Sochacki <cyrylsochacki@gmail.com>, 2012
-# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2012-2015
+# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2012-2015,2017
 # Jacek Niedziółka <>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2017-04-12 16:36+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-06-27 06:16+0000\n"
+"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/votdev/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -122,7 +122,7 @@ msgid "Size"
 msgstr "Rozmiar"
 
 msgid "Snapshot"
-msgstr ""
+msgstr "Migawka"
 
 msgid "Used"
 msgstr "Użyte"
