--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-02 15:50+0200\n"
-"PO-Revision-Date: 2017-07-02 13:53+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-07-02 17:27+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -886,7 +886,7 @@ msgid "Displaying items {0} - {1} of {2}"
 msgstr "Zobrazeno položek {0} - {1} z {2}"
 
 msgid "Displaying {0} - {1} of {2}"
-msgstr ""
+msgstr "Zobrazení {0} - {1} z {2}"
 
 msgid "Djibouti"
 msgstr "Džibutsko"
@@ -1317,7 +1317,7 @@ msgid "Firmware version"
 msgstr "Verze firmware"
 
 msgid "First Page"
-msgstr ""
+msgstr "První stránka"
 
 msgid "Flags"
 msgstr "Příznaky"
@@ -1762,7 +1762,7 @@ msgid "Laos"
 msgstr "Laos"
 
 msgid "Last Page"
-msgstr ""
+msgstr "Poslední stránka"
 
 msgid "Latvia"
 msgstr "Lotyšsko"
@@ -2113,7 +2113,7 @@ msgid "New Zealand"
 msgstr "Nový Zéland"
 
 msgid "Next Page"
-msgstr ""
+msgstr "Následující stránka"
 
 msgid "Nicaragua"
 msgstr "Nikaragua"
@@ -2146,7 +2146,7 @@ msgid "No connections"
 msgstr "Žádná spojení"
 
 msgid "No data to display"
-msgstr ""
+msgstr "Chybí data – není co zobrazovat"
 
 msgid "No items to display"
 msgstr "Žádné položky k zobrazení"
@@ -2272,7 +2272,7 @@ msgid "Package information"
 msgstr "Informace o balíčku"
 
 msgid "Page"
-msgstr ""
+msgstr "Stránka"
 
 msgid "Page not found"
 msgstr "Stránka nebyla nalezena"
@@ -2488,7 +2488,7 @@ msgid ""
 msgstr "Zamezit roztáčení zastavených disků jen kvůli pravidelnému dotazování v případě:<br/><ul><li>Nikdy – Dotázat zařízení bez ohledu na stav napájení, ve kterém se nachází. Může způsobovat zbytečné roztáčení stojích disků.</li><li>Spánku – Dotázat se zařízení jen pokud se nenachází v režimu SPÁNKU.</li><li>Pohotovosti – Dotázat se zařízení jen pokud se nenachází v režimu SPÁNKU či POHOTOVOSTI.<br/>(V těchto režimech bývá většina disků zastavena, takže když chcete zabránit zbytečnému roztáčení disků, je tato volba nejspíš nejvhodnější.)</li><li>Nečinnosti – Zkontrolovat zařízení pouze pokud se nenachází v režimu SPÁNKU, POHOTOVOSTI či NEČINNOSTI.<br/>(Ve stavu NEČINNOSTI se ale většina disků stejně točí, takže toto nejspíš není to, co potřebujete.)</li></ul>"
 
 msgid "Previous Page"
-msgstr ""
+msgstr "Předchozí stránka"
 
 msgid "Primary"
 msgstr "Hlavní"
@@ -4044,7 +4044,7 @@ msgid "n/a"
 msgstr "neaplikovatelné"
 
 msgid "of {0}"
-msgstr ""
+msgstr "z {0}"
 
 msgid "old-age"
 msgstr "v minulosti"
