--- a/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-02 15:50+0200\n"
-"PO-Revision-Date: 2017-07-02 13:53+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-07-05 10:05+0000\n"
+"Last-Translator: Kostas Moho <kgounaris@hotmail.com>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/votdev/openmediavault/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -885,7 +885,7 @@ msgid "Displaying items {0} - {1} of {2}"
 msgstr "Εμφάνιση εγγραφών {0} - {1} από {2}"
 
 msgid "Displaying {0} - {1} of {2}"
-msgstr ""
+msgstr "Εμφάνιση {0} - {1} από {2}"
 
 msgid "Djibouti"
 msgstr "Djibouti"
@@ -1316,7 +1316,7 @@ msgid "Firmware version"
 msgstr "Έκδοση λογισμικού"
 
 msgid "First Page"
-msgstr ""
+msgstr "Πρώτη Σελίδα"
 
 msgid "Flags"
 msgstr "Σημάνσεις"
@@ -1761,7 +1761,7 @@ msgid "Laos"
 msgstr "Laos"
 
 msgid "Last Page"
-msgstr ""
+msgstr "Τελευταία Σελίδα"
 
 msgid "Latvia"
 msgstr "Latvia"
@@ -2112,7 +2112,7 @@ msgid "New Zealand"
 msgstr "New Zealand"
 
 msgid "Next Page"
-msgstr ""
+msgstr "Επόμενη Σελίδα"
 
 msgid "Nicaragua"
 msgstr "Nicaragua"
@@ -2145,7 +2145,7 @@ msgid "No connections"
 msgstr "Χωρίς συνδέσεις"
 
 msgid "No data to display"
-msgstr ""
+msgstr "Δεν υπάρχουν δεδομένα προς εμφάνιση"
 
 msgid "No items to display"
 msgstr "Δεν υπάρχει τίποτα προς εμφάνιση"
@@ -2271,7 +2271,7 @@ msgid "Package information"
 msgstr "Πληροφορίες πακέτου"
 
 msgid "Page"
-msgstr ""
+msgstr "Σελίδα"
 
 msgid "Page not found"
 msgstr "Η σελίδα δεν βρέθηκε"
@@ -2487,7 +2487,7 @@ msgid ""
 msgstr "Να μην εκκινείται ο δίσκος κατα τον περιοδικό του έλεγχο.<br/><ul><li>Ποτέ - Να ελέγχεται (περιοδικά) η συσκευή ανεξάρτητα από την κατάστασή της. Έτσι μπορεί να εκκινείται κατά τον έλεγχο κάποιος δίσκος που είχε σταματήσει.</li><li>Ύπνος - Να ελέγχεται η συσκευή εκτος αν βρίσκεται σε κατάσταση ύπνου.</li><li>Αναμονή - Να ελέγχεται η συσκευή εκτός αν βρίσκεται σε κατάσταση ύπνου ή αναμονής. Σε αυτές τις καταστάσεις οι περισσότεροι δίσκοι είναι ήδη σταματημένοι, συνεπώς αν στόχος είναι να μην ξεκινάνε κατά τον έλεγχο, αυτή η επιλογή είναι η προτεινόμενη.</li><li>Αδράνεια - Να ελέγχεται η συσκευή, εκτός αν βρίσκεται σε κατάσταση ύπνου, αναμονής ή αδράνειας. Σε κατάσταση αδράνειας οι περισσότεροι δίσκοι είναι ακόμα ενεργοί, συνεπώς αυτή η επιλογή δεν προτείνεται.</li></ul>"
 
 msgid "Previous Page"
-msgstr ""
+msgstr "Προηγούμενη Σελίδα"
 
 msgid "Primary"
 msgstr "Πρωτεύον"
@@ -4043,7 +4043,7 @@ msgid "n/a"
 msgstr "τίποτα"
 
 msgid "of {0}"
-msgstr ""
+msgstr "από {0}"
 
 msgid "old-age"
 msgstr "old-age"
