--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-02 15:50+0200\n"
-"PO-Revision-Date: 2017-07-02 13:53+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-07-04 07:48+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -886,7 +886,7 @@ msgid "Displaying items {0} - {1} of {2}"
 msgstr "Tételek megjelenítése {0} - {1} közül {2}"
 
 msgid "Displaying {0} - {1} of {2}"
-msgstr ""
+msgstr "Megjelenítés {0} - {1} közül {2}"
 
 msgid "Djibouti"
 msgstr "Dzsibuti"
@@ -1317,7 +1317,7 @@ msgid "Firmware version"
 msgstr "Firmware verzió"
 
 msgid "First Page"
-msgstr ""
+msgstr "Első oldal"
 
 msgid "Flags"
 msgstr "Zászlók"
@@ -1762,7 +1762,7 @@ msgid "Laos"
 msgstr "Laosz"
 
 msgid "Last Page"
-msgstr ""
+msgstr "Utolsó oldal"
 
 msgid "Latvia"
 msgstr "Lettország"
@@ -2113,7 +2113,7 @@ msgid "New Zealand"
 msgstr "Új-Zéland "
 
 msgid "Next Page"
-msgstr ""
+msgstr "Következő oldal"
 
 msgid "Nicaragua"
 msgstr "Nicaragua"
@@ -2146,7 +2146,7 @@ msgid "No connections"
 msgstr "Nincsenek kapcsolatok"
 
 msgid "No data to display"
-msgstr ""
+msgstr "Nincs megjeleníthető adat"
 
 msgid "No items to display"
 msgstr "Nincsenek megjeleníthető tételek"
@@ -2272,7 +2272,7 @@ msgid "Package information"
 msgstr "Csomag információ"
 
 msgid "Page"
-msgstr ""
+msgstr "Oldal"
 
 msgid "Page not found"
 msgstr "Az oldal nem található"
@@ -2488,7 +2488,7 @@ msgid ""
 msgstr "Lemez felpörgésének megakadályozása, az időnkénti elérési lekérdezés miatt.<br/><br/><ul><li>Soha - Lekérdezés (ellenőrzés) figyelmen kívül hagyja a lemez energiagazdálkodási módját. Ez okozhatja a lemez felpörgését és leállását.</li><li>Alvóállapot - Lemez ellenőrzése, kivéve ha ALVÓ üzemmódba van.</li><li>Készenlét - Lemez ellenőrzése, kivéve ha ALVÓ vagy KÉSZENLÉTI üzemmódba van. Ebben a módban a legtöbb lemez nem pörög, ezért ha megakarod akadályozni a lemez felpörgését az egyes lekérdezések miatt, valószínűleg erre a módra van szükséged.</li><li>Tétlen - Lemez ellenőrzése, kivéve ha ALVÓ, KÉSZENLÉTI vagy TÉTLEN üzemmódba van. Tétlen állapotban a legtöbb lemez pörög, valószínűleg ez nem az amit akarsz.</li></ul>"
 
 msgid "Previous Page"
-msgstr ""
+msgstr "Előző oldal"
 
 msgid "Primary"
 msgstr "Elsődleges"
@@ -4044,7 +4044,7 @@ msgid "n/a"
 msgstr "n/a"
 
 msgid "of {0}"
-msgstr ""
+msgstr "közül {0}"
 
 msgid "old-age"
 msgstr "elhasználódás"
