--- a/deb/openmediavault/usr/share/openmediavault/locale/nl_NL/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/nl_NL/openmediavault.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-02 15:50+0200\n"
-"PO-Revision-Date: 2017-07-02 13:53+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-07-02 18:00+0000\n"
+"Last-Translator: Milan Toet <milantoet@gmail.com>\n"
 "Language-Team: Dutch (Netherlands) (http://www.transifex.com/votdev/openmediavault/language/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -888,7 +888,7 @@ msgid "Displaying items {0} - {1} of {2}"
 msgstr "Items {0} - {1} van {2} worden getoond"
 
 msgid "Displaying {0} - {1} of {2}"
-msgstr ""
+msgstr "{0} - {1} van {2} worden getoond"
 
 msgid "Djibouti"
 msgstr "Djibouti"
@@ -1319,7 +1319,7 @@ msgid "Firmware version"
 msgstr "Firmware versie"
 
 msgid "First Page"
-msgstr ""
+msgstr "Eerste Pagina"
 
 msgid "Flags"
 msgstr "Vlaggen"
@@ -1764,7 +1764,7 @@ msgid "Laos"
 msgstr "Laos"
 
 msgid "Last Page"
-msgstr ""
+msgstr "Laatste Pagina"
 
 msgid "Latvia"
 msgstr "Letland"
@@ -2115,7 +2115,7 @@ msgid "New Zealand"
 msgstr "Nieuw-Zeeland"
 
 msgid "Next Page"
-msgstr ""
+msgstr "Volgende Pagina"
 
 msgid "Nicaragua"
 msgstr "Nicaragua"
@@ -2148,7 +2148,7 @@ msgid "No connections"
 msgstr "Geen verbindingen"
 
 msgid "No data to display"
-msgstr ""
+msgstr "Geen gegevens om weer te geven"
 
 msgid "No items to display"
 msgstr "Geen items om weer te geven"
@@ -2274,7 +2274,7 @@ msgid "Package information"
 msgstr "Pakketinformatie"
 
 msgid "Page"
-msgstr ""
+msgstr "Pagina"
 
 msgid "Page not found"
 msgstr "Pagina niet gevonden"
@@ -2490,7 +2490,7 @@ msgid ""
 msgstr "Voorkom dat een schijf een spin-up doet wanner het periodiek wordt aangeroepen.<br/><ul><li>Voer nooit - Poll(check)- uit ondanks de powerstatus. Het kan dan gebeuren dat een schijf de spin-up is de status spin-down geeft.</li><li>Sleep-Check het apparaat tenzij deze zich in SLEEP-modus bevindt.</li><li>Standby - Check het apparaat tenzij het zich in SLEEP of STANDBY-modus bevindt. In deze modi zullen de meeste apparaten niet spinnen, dus als u wilt voorkomen dat schijven spinnen na elke aanroep, dan is dit waarschijnlijk de instelling die u zoekt. </li><li>Idle - Check het apparaat tenzij het zich in SLEEP, STANDBY of IDLE-modus bevindt. In IDLE-modus spinnen de meeste schijven nog, dus dit is waarschijnlijk niet wat u zoekt.</li></ul>"
 
 msgid "Previous Page"
-msgstr ""
+msgstr "Vorige Pagina"
 
 msgid "Primary"
 msgstr "Primair"
@@ -4046,7 +4046,7 @@ msgid "n/a"
 msgstr "n.v.t."
 
 msgid "of {0}"
-msgstr ""
+msgstr "van {0}"
 
 msgid "old-age"
 msgstr "ouderdomssporen"
