--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -17,8 +17,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-02 15:50+0200\n"
-"PO-Revision-Date: 2017-07-02 13:53+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-07-03 07:47+0000\n"
+"Last-Translator: Артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -893,7 +893,7 @@ msgid "Displaying items {0} - {1} of {2}"
 msgstr "Отображение пунктов {0} - {1} , {2}"
 
 msgid "Displaying {0} - {1} of {2}"
-msgstr ""
+msgstr "Отображение {0} - {1} из {2}"
 
 msgid "Djibouti"
 msgstr "Джибути"
@@ -1324,7 +1324,7 @@ msgid "Firmware version"
 msgstr "Версия прошивки"
 
 msgid "First Page"
-msgstr ""
+msgstr "Первая страница"
 
 msgid "Flags"
 msgstr "Флаг"
@@ -1769,7 +1769,7 @@ msgid "Laos"
 msgstr "Лаос"
 
 msgid "Last Page"
-msgstr ""
+msgstr "Последняя страница"
 
 msgid "Latvia"
 msgstr "Латвия"
@@ -2120,7 +2120,7 @@ msgid "New Zealand"
 msgstr "Новая Зеландия"
 
 msgid "Next Page"
-msgstr ""
+msgstr "Следующая Страница"
 
 msgid "Nicaragua"
 msgstr "Никарагуа"
@@ -2153,7 +2153,7 @@ msgid "No connections"
 msgstr "Нет соединения"
 
 msgid "No data to display"
-msgstr ""
+msgstr "Нет данных для отображения"
 
 msgid "No items to display"
 msgstr "Нет объектов для отображения"
@@ -2279,7 +2279,7 @@ msgid "Package information"
 msgstr "Информация о пакете"
 
 msgid "Page"
-msgstr ""
+msgstr "Страница"
 
 msgid "Page not found"
 msgstr "Страница не найдена"
@@ -2495,7 +2495,7 @@ msgid ""
 msgstr "Предотвращает диск от раскручивания при периодических запросах.<br/><br/><ul><li>Никогда - Опрашивать (проверять) устройство независимо от режима питания. Это может привести к тому, что остановленный диск будет вновь раскручен, когда будет проверен.</li><li>Сон - Проверять устройство, если оно не находится в режиме СОН.</li><li>Ожидание - Проверять устройство, если оно не находится в режиме СОН или ОЖИДАНИЕ. В этих режимах большинство дисков не раскручиваются, так что если Вы хотите предотвратить раскручивание диска при каждом запросе, скорее всего это тот режим, который Вам нужен.</li><li>Неактивный - Проверять устройство, если оно не находится в режиме СОН, ОЖИДАНИЕ или НЕАКТИВНЫЙ. В режиме НЕАКТИВНЫЙ большинство дисков продолжают раскручиваться, так что скорее всего это не тот режим, который Вам нужен.</li></ul>"
 
 msgid "Previous Page"
-msgstr ""
+msgstr "Предыдущая страница"
 
 msgid "Primary"
 msgstr "Основной"
@@ -4051,7 +4051,7 @@ msgid "n/a"
 msgstr "n/a"
 
 msgid "of {0}"
-msgstr ""
+msgstr "из {0}"
 
 msgid "old-age"
 msgstr "Старые"
