--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-02 15:50+0200\n"
-"PO-Revision-Date: 2017-07-02 13:53+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-07-02 23:53+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -886,7 +886,7 @@ msgid "Displaying items {0} - {1} of {2}"
 msgstr "顯示項目 {0} - {1} 總共 {2}"
 
 msgid "Displaying {0} - {1} of {2}"
-msgstr ""
+msgstr "目前顯示 {0} - {1} 總共 {2}"
 
 msgid "Djibouti"
 msgstr "吉布提"
@@ -1317,7 +1317,7 @@ msgid "Firmware version"
 msgstr "韌體版本"
 
 msgid "First Page"
-msgstr ""
+msgstr "第一頁"
 
 msgid "Flags"
 msgstr "旗標"
@@ -1762,7 +1762,7 @@ msgid "Laos"
 msgstr "寮國"
 
 msgid "Last Page"
-msgstr ""
+msgstr "最後頁"
 
 msgid "Latvia"
 msgstr "拉托維亞"
@@ -2113,7 +2113,7 @@ msgid "New Zealand"
 msgstr "紐西蘭"
 
 msgid "Next Page"
-msgstr ""
+msgstr "下一頁"
 
 msgid "Nicaragua"
 msgstr "尼加拉瓜"
@@ -2146,7 +2146,7 @@ msgid "No connections"
 msgstr "沒有連線"
 
 msgid "No data to display"
-msgstr ""
+msgstr "無資料可顯示"
 
 msgid "No items to display"
 msgstr "無項目可顯示"
@@ -2272,7 +2272,7 @@ msgid "Package information"
 msgstr "套件資訊"
 
 msgid "Page"
-msgstr ""
+msgstr "頁"
 
 msgid "Page not found"
 msgstr "未找到網頁"
@@ -2488,7 +2488,7 @@ msgid ""
 msgstr "當做定時查驗時，避免磁碟開始轉動。<br/><ul><li>永不 - 查驗(檢查)裝置，不論它的耗電模式是什麼。當進行檢查時，這可能會造成已經停止轉動的磁碟開始轉動。</li><li>睡眠 - 檢查裝置，除非它正處於睡眠模式。</li><li>待機 - 檢查裝置，除非它正處於睡眠或待機模式。在這些模式下大多數磁碟都沒有轉動，所以如果你想避免磁碟在每次查驗時開始轉動，這可能就是你想要的。</li><li>閒置 - 檢查裝置，除非它正處於睡眠、待機或閒置模式。在閒置狀態下，大多數磁碟都還在轉動，所以這可能不是你想要的。</li></ul>"
 
 msgid "Previous Page"
-msgstr ""
+msgstr "前一頁"
 
 msgid "Primary"
 msgstr "主要"
@@ -4044,7 +4044,7 @@ msgid "n/a"
 msgstr "n/a"
 
 msgid "of {0}"
-msgstr ""
+msgstr "總共 {0} 頁"
 
 msgid "old-age"
 msgstr "老齡"
