Improve error dialog with long messages.
(cherry picked from commit 8cfb221af5e6b0a7b1d30c802b5ddce6389cf250)
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -17,6 +17,12 @@ openmediavault (4.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Feb 2017 13:28:40 +0100
 
+openmediavault (3.0.83) stable; urgency=low
+
+  * Improve error dialog with long messages.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 06 Jul 2017 15:39:07 +0200
+ 
 openmediavault (3.0.82) stable; urgency=low
 
   * Update locales.
