Fix bug in the Quota::set() RPC.
(cherry picked from commit f42bcf4b70d9e93f0837a6b60930571bb701a074)
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -20,6 +20,7 @@ openmediavault (4.0) stable; urgency=low
 openmediavault (3.0.83) stable; urgency=low
 
   * Improve error dialog with long messages.
+  * Fix bug in the Quota::set() RPC.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 06 Jul 2017 15:39:07 +0200
  
