Mantis 0001773: UID_MAX and GID_MAX from login.defs not read.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (3.0.83) stable; urgency=low
 
   * Improve error dialog with long messages.
   * Fix bug in the Quota::set() RPC.
+  * Mantis 0001773: UID_MAX and GID_MAX from login.defs not read.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 06 Jul 2017 15:39:07 +0200
 
