--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (3.0.83) stable; urgency=low
 
+  * Update locales.
   * Improve error dialog with long messages.
   * Fix bug in the Quota::set() RPC.
   * Mantis 0001773: UID_MAX and GID_MAX from login.defs not read.
