--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-02 15:50+0200\n"
-"PO-Revision-Date: 2017-07-02 13:53+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-07-06 15:19+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -890,7 +890,7 @@ msgid "Displaying items {0} - {1} of {2}"
 msgstr "Mostrati {0} - {1} di {2} elementi"
 
 msgid "Displaying {0} - {1} of {2}"
-msgstr ""
+msgstr "Mostrati {0} - {1} di {2}"
 
 msgid "Djibouti"
 msgstr "Gibuti"
@@ -1321,7 +1321,7 @@ msgid "Firmware version"
 msgstr "Versione del firmware"
 
 msgid "First Page"
-msgstr ""
+msgstr "Prima Pagina"
 
 msgid "Flags"
 msgstr "Flag"
@@ -1766,7 +1766,7 @@ msgid "Laos"
 msgstr "Laos"
 
 msgid "Last Page"
-msgstr ""
+msgstr "Ultima Pagina"
 
 msgid "Latvia"
 msgstr "Lettonia"
@@ -2117,7 +2117,7 @@ msgid "New Zealand"
 msgstr "Nuova Zelanda"
 
 msgid "Next Page"
-msgstr ""
+msgstr "Prossima Pagina"
 
 msgid "Nicaragua"
 msgstr "Nicaragua"
@@ -2150,7 +2150,7 @@ msgid "No connections"
 msgstr "Nessuna connessione"
 
 msgid "No data to display"
-msgstr ""
+msgstr "Nessun dato da visualizzare"
 
 msgid "No items to display"
 msgstr "Nessun oggetto da visualizzare"
@@ -2276,7 +2276,7 @@ msgid "Package information"
 msgstr "Informazioni del pacchetto"
 
 msgid "Page"
-msgstr ""
+msgstr "Pagina"
 
 msgid "Page not found"
 msgstr "Pagina non trovata"
@@ -2492,7 +2492,7 @@ msgid ""
 msgstr "Evita che un disco diventi spun-up se interrogato periodicamente.<br/><br/><ul><li>Mai - Interroga (verifica) il dispositivo indipendentemente dalla sua modalità energetica. Potrebbe fra diventare spun-up un disco che si trovi nello stato spun-down al momento della sua interrogazione.</li><li>Sleep - Verifica il dispositivo a meno che non sia in modalità SLEEP.</li><li>Standby - verifica il dispositivo a meno che non si trovi in stato SLEEP o STANDBY. In questi stati molti dischi non sono in rotazione, così se vuoi evitare che un disco si rimetta in moto ad ogni interrogazione, questa è probabilmente l'opzione che desideri.</li><li>Idle - Verifica il dispositivo a meno che non si trovi in stato SLEEP, STANDBY o IDLE. Nello stato IDLE, molti dischi continuano a girare, quindi probabilmente questa non è la soluzione che desideri.</li></ul>"
 
 msgid "Previous Page"
-msgstr ""
+msgstr "Pagina Precedente"
 
 msgid "Primary"
 msgstr "Primario"
@@ -4048,7 +4048,7 @@ msgid "n/a"
 msgstr "n/c"
 
 msgid "of {0}"
-msgstr ""
+msgstr "di {0}"
 
 msgid "old-age"
 msgstr "old-age"
