--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-lvm2 (3.2.3) stable; urgency=low
+
+  * Various improvements and small bugfixes.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 10 Jul 2017 21:41:56 +0200
+
 openmediavault-lvm2 (3.2.2) stable; urgency=low
 
   * Mantis 0001761: Can not create a lv.
