--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.84) stable; urgency=low
+
+  * Get correct CPU information for NanoPi NEO 2.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 11 Jul 2017 22:27:28 +0200
+
 openmediavault (3.0.83) stable; urgency=low
 
   * Update locales.
