--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (3.0.84) stable; urgency=low
 
+  * Various improvements in the WebUI.
   * Get correct CPU information for NanoPi NEO 2.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 11 Jul 2017 22:27:28 +0200
