--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -23,6 +23,13 @@ openmediavault (4.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Feb 2017 13:28:40 +0100
 
+openmediavault (3.0.84) stable; urgency=low
+
+  * Various improvements in the WebUI.
+  * Get correct CPU information for NanoPi NEO 2.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 11 Jul 2017 22:27:28 +0200
+
 openmediavault (3.0.83) stable; urgency=low
 
   * Update locales.
