--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (3.0.84) stable; urgency=low
 
   * Various improvements in the WebUI.
   * Get correct CPU information for NanoPi NEO 2.
+  * Improve handling of inactive logical volumes.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 11 Jul 2017 22:27:28 +0200
 
