--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-lvm2 (3.2.4) stable; urgency=low
 
+  * Update locales.
   * Display logical volume status.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Jul 2017 19:43:53 +0200
