--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/de_DE/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/de_DE/openmediavault-lvm2.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2017-04-12 16:38+0000\n"
+"POT-Creation-Date: 2017-07-14 20:04+0200\n"
+"PO-Revision-Date: 2017-07-14 18:05+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/votdev/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -19,6 +19,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+msgid "Active"
+msgstr "Aktiv"
 
 msgid "Add physical volume"
 msgstr "Füge ein physikalisches Volume hinzu"
