--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (3.0.85) stable; urgency=low
+
+  * Various improvements in the WebUI.
+  * Mantis 0001777: Memory leak when calling Guru Meditation window.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 17 Jul 2017 17:55:39 +0200
+
 openmediavault (3.0.84) stable; urgency=low
 
   * Various improvements in the WebUI.
