--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -23,6 +23,14 @@ openmediavault (4.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Feb 2017 13:28:40 +0100
 
+openmediavault (3.0.85) stable; urgency=low
+
+  * Various improvements in the WebUI.
+  * Mantis 0001777: Memory leak when calling Guru Meditation window.
+  * Mantis 0001781: Increase granularity on SSH "Permit root login" setting.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 17 Jul 2017 17:55:39 +0200
+
 openmediavault (3.0.84) stable; urgency=low
 
   * Various improvements in the WebUI.
