--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -26,6 +26,8 @@ openmediavault (4.0) stable; urgency=low
 openmediavault (3.0.85) stable; urgency=low
 
   * Various improvements in the WebUI.
+  * Display auto network interfaces (e.g. bonded and vlan interfaces) in the
+    CLI welcome message.
   * Mantis 0001777: Memory leak when calling Guru Meditation window.
   * Mantis 0001781: Increase granularity on SSH "Permit root login" setting.
 
