--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,7 @@ openmediavault (3.0.85) stable; urgency=low
   * Display auto network interfaces (e.g. bonded and vlan interfaces) in the
     CLI welcome message.
   * Set a maximum value for the MTU on the WebUI.
+  * Allow browser caching Web UI CSS/Javascript/Images.
   * Mantis 0001777: Memory leak when calling Guru Meditation window.
   * Mantis 0001781: Increase granularity on SSH "Permit root login" setting.
 
