--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -34,6 +34,7 @@ openmediavault (3.0.85) stable; urgency=low
     open S.M.A.R.T. details.
   * Mantis 0001777: Memory leak when calling Guru Meditation window.
   * Mantis 0001781: Increase granularity on SSH "Permit root login" setting.
+  * Mantis 0001782: BTRFS multi device listing is wrong formatted.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 17 Jul 2017 17:55:39 +0200
 
