--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -5,6 +5,7 @@ openmediavault (3.0.85) stable; urgency=low
     CLI welcome message.
   * Set a maximum value for the MTU on the WebUI.
   * Allow browser caching WebUI CSS/Javascript/Images.
+  * Add Xen virtual disk storage backend.
   * Mantis 0001772: S.M.A.R.T. WebUI shows red light, but all is green when
     open S.M.A.R.T. details.
   * Mantis 0001777: Memory leak when calling Guru Meditation window.
